# pointcloud_projection

./: README.md
kb4_project/: CMakeLists.txt  kb4_project.cpp
omnidiretional_project/: CMakeLists.txt  omidirectional.cpp
pinhole_project/: CMakeLists.txt  pinhole_project.cpp
